jabref: auto updated to 5.13-1